tests/paczka1/small_fuzzy/86780232.err
Error in line 1: vgIOboq A126 42,4
Error in line 4: vgIOboq S116 59,8
Error in line 15: tTb A328 99,2
